# magmaforge_practical_exercise

./: Dockerfile  FracCrystExercise.ipynb  Makefile  README.md  hekla.csv  pyproject.toml  run_docker_locally.sh
notebooks/: Gibbs_Equilibrate.ipynb  MELTS-fractionation.ipynb  equil-fractionation.ipynb  lunar_magma_ocean_cooling.ipynb  lunar_magma_ocean_cooling_old.ipynb  rholite-magma-evolution.ipynb  validate_entropic_cooling_BSE.ipynb
notebooks/archive/: Spl_driven_entropic_cooling.ipynb  validate_entropic_cooling.ipynb
notebooks/data/: Moon_press.csv
src/MagmaForge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/magmaforge/: __init__.py  plot.py  state_info.py  system.py  system_calculator.py
tests/: pytest.ini  test_equil.py
