[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MagmaForge"
version = "0.0.1"
authors = [
  { name="Aaron S. Wolf", email="aswolf@umich.edu" },
]
description = "A python-based thermodynamics package for evolving magmas"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://gitlab.com/aswolf/magmaforge"